; ModuleID = '/home/carl/AnghaBench/tmux/extr_format-draw.c_format_is_type.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_format-draw.c_format_is_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.format_range = type { i64, i64 }
%struct.style = type { i64, i64 }

@STYLE_RANGE_WINDOW = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.format_range*, %struct.style*)* @format_is_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @format_is_type(%struct.format_range* %0, %struct.style* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.format_range*, align 8
  %5 = alloca %struct.style*, align 8
  store %struct.format_range* %0, %struct.format_range** %4, align 8
  store %struct.style* %1, %struct.style** %5, align 8
  %6 = load %struct.format_range*, %struct.format_range** %4, align 8
  %7 = getelementptr inbounds %struct.format_range, %struct.format_range* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.style*, %struct.style** %5, align 8
  %10 = getelementptr inbounds %struct.style, %struct.style* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %8, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %30

14:                                               ; preds = %2
  %15 = load %struct.format_range*, %struct.format_range** %4, align 8
  %16 = getelementptr inbounds %struct.format_range, %struct.format_range* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @STYLE_RANGE_WINDOW, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %29

20:                                               ; preds = %14
  %21 = load %struct.format_range*, %struct.format_range** %4, align 8
  %22 = getelementptr inbounds %struct.format_range, %struct.format_range* %21, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = load %struct.style*, %struct.style** %5, align 8
  %25 = getelementptr inbounds %struct.style, %struct.style* %24, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = icmp ne i64 %23, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %20
  store i32 0, i32* %3, align 4
  br label %30

29:                                               ; preds = %20, %14
  store i32 1, i32* %3, align 4
  br label %30

30:                                               ; preds = %29, %28, %13
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
